# OpenCV-self-driving-car

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  code-of-conduct.md
UnitTests/: UnitTests.cpp
primeChecker/: .dockerignore  CMakeLists.txt  Dockerfile  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld  helloworld.cpp  runner
src/: opendlv-standard-message-set-v0.9.6.odvd  steering.cpp  steering.hpp
tests/: christian_oneill.txt
